# SupportSphere-AI

./: .env  .gitignore  README.md  app.py  main.py  packages.txt  problem_statement.md  pyproject.toml
Notbooks/: 02_Document_Preprocessing.ipynb  03_Text_Chunking.ipynb  04_Embedding_Generation.ipynb  05A_FAISS_Vector_Ingestion.ipynb  05B_Pinecone_Vector_Ingestion.ipynb  06_RAG_Retrieval.ipynb
artifacts/: chunks.parquet  document_inventory.csv  visa.index
data/support_tickets/: Support_tickets5_ground_truth.csv  guardrail_support_tickets.csv  guardrail_support_tickets_predictions.csv  output.csv  support_tickets5.csv  support_tickets_output_google.csv
docs/: Antigravity-Engineering-Spec.md  Antigravity-Implementation-Spec.md  architecture.md  developer_guide.md  practice.ipynb  workflow.md
docs/prompts/: SYSTEM_PROMPT_1.md  SYSTEM_PROMPT_2.md  SYSTEM_PROMPT_PRODUCTION_1.md  SupportSphere_Guardrail_Test_Suite.md
evaluation/: __init__.py  dataset.py  evaluation_prompt.py  experiment.py  models.py  reports.py  runner.py
evaluation/classification/: __init__.py  evaluator.py  metrics.py
evaluation/ragas/: __init__.py  evaluator.py  metrics.py
evaluation/reports/: evaluation_results_google_gemini-2.5-flash-lite.csv  evaluation_results_openai_gpt-4o-mini.csv
pipeline/ingestion/: document_processor.py  embedder.py  ingest.py  pinecone_client.py  vector_store.py
pipeline/preprocessing/: article_enricher.py  chunker.py  markdown_parser.py  metadata_builder.py
src/: app.py  config.py
src/ai/: client.py  models.py  prompt_builder.py  registry.py  system_prompt.py
src/billing/: __init__.py  calculator.py  catalog.py  models.py
src/graph/: graph.py  guardrails.py  nodes.py  state.py  support_agent.py
src/llm/: evaluation_models.py  prompt_builder.py
src/retrieval/: bm25_index.py  context_builder.py  hybrid_search.py  rank_fusion.py  retriever.py  vector_search.py
src/streamlit_app/: __init__.py  charts.py  dashboard.py  evaluation.py  sidebar.py  utils.py
src/utils/: logging.py
src/validation/: input_validator.py  output_validator.py  (+1 more)
tests/: test_company_detection.py  test_model_validation.py  test_retrieval.py
(+59 files in other folders)
