[project]
name = "supportsphere-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.3",
    "fastparquet>=2026.5.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.7",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.8",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pinecone>=9.1.0",
    "tqdm>=4.68.4",
]
