[project]
name = "supportsphere-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "fastparquet>=2026.5.0",
    "google-genai>=2.10.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.4",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.8",
    "pinecone>=9.1.0",
    "python-frontmatter>=1.3.0",
    "rank-bm25>=0.2.2",
    "tqdm>=4.68.4",
]
