[project]
name = "supportsphere-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "deepeval>=4.1.0",
    "dotenv>=0.9.9",
    "fastparquet>=2026.5.0",
    "flashrank>=0.2.10",
    "google-genai>=2.10.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-google-vertexai>=3.2.4",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.4",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.8",
    "pandas>=3.0.3",
    "pinecone>=9.1.0",
    "plotly>=6.9.0",
    "python-frontmatter>=1.3.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.2",
    "torchvision>=0.28.0",
    "tqdm>=4.68.4",
]
